Implement Better Auth for user authentication; update environment variables, schema, and API routes. Add sign-in and sign-up pages, and refactor contact actions to utilize new auth methods.

--- a/.example.env
+++ b/.example.env
@@ -1,7 +1,8 @@
-# Neon Auth environment variables for Next.js
-NEXT_PUBLIC_STACK_PROJECT_ID=
-NEXT_PUBLIC_STACK_PUBLISHABLE_CLIENT_KEY=
-STACK_SECRET_SERVER_KEY=
+# Better Auth secret (generate with: openssl rand -base64 32)
+BETTER_AUTH_SECRET=
+
+# App URL for Better Auth
+NEXT_PUBLIC_APP_URL=http://localhost:3000
 
 # Neon Database owner connection string
 DATABASE_URL=
