--- a/package.json
+++ b/package.json
@@ -42,9 +42,9 @@
     "@radix-ui/react-toggle": "^1.1.9",
     "@radix-ui/react-toggle-group": "^1.1.10",
     "@radix-ui/react-tooltip": "^1.2.7",
-    "@stackframe/stack": "^2.8.27",
     "@tanstack/electric-db-collection": "^0.1.1",
     "@tanstack/react-db": "^0.1.1",
+    "better-auth": "^1.3.34",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
